# ffea-mirror

./: .gitignore  CMakeLists.txt  branch-organisation.md  build_pymol_plugin.py  insert_basic_test.py  install_ffea.sh  run_specific_tests.py
cmake/: GetBoostModern.cmake  GetEigen3Modern.cmake  GetFFEATools.cmake  doxygen.cmake
docs/1-Overview/: Overview.md
docs/4-Tutorial/: 11-Rods.md
docs/5-DevManual/: 2-writingUnitTests.md
ffeatools/FFEA_analysis/Euler_characteristic_analysis/: build_euler_characteristic_table.cpp
ffeatools/FFEA_analysis/pymol_plugin/: __init__.py
ffeatools/FFEA_initialise/FFEA_mapping_tools/: make_structure_map.cpp
ffeatools/FFEA_initialise/Surface_tools/surface_coarse_grainer/: surface_coarse_grainer_final.cpp
ffeatools/modules/: FFEA_pdb.py  FFEA_rod.py
ffeatools/modules/rod/: ndc_extractor.py
include/: BEM_Poisson_Boltzmann.h  BiCGSTAB_solver.h  BindingSite.h  Blob.h  BlobLite.h  CG_solver.h  CheckTetrahedraOverlap.h  ConjugateGradientSolver.h  FFEA_input_reader.h  FFEA_return_codes.h  Face.h  GaussianQuadrature_1d.h  GaussianQuadrature_tri.h  GenSoftSSINT_solver.h  KineticState.h  LJSteric_solver.h  LJ_matrix.h  LinkedListCube.h  MassLumpedSolver.h  MassMatrixLinear.h  MassMatrixQuadratic.h  NearestNeighbourLinkedListCube.h  NoMassCGSolver.h  PoissonMatrixQuadratic.h  PreComp_solver.h  RngStream.h  SecondOrderFunctions.h  SimulationParams.h  Solver.h  SparseMatrixFixedPattern.h  SparseMatrixTypes.h  SparseMatrixUnknownPattern.h  SparseSubstitutionSolver.h  SparsityPattern.h  Spring.h  Steric_solver.h  VdW_solver.h  VolumeIntersection.h  World.h  dimensions.h  (+11 more)
src/: BEM_Poisson_Boltzmann.cpp  BiCGSTAB_solver.cpp  BindingSite.cpp  Blob.cpp  BlobLite.cpp  CG_solver.cpp  CMakeLists.txt  CheckTetrahedraOverlap.cpp  ConjugateGradientSolver.cpp  FFEA_input_reader.cpp  FFEA_return_codes.cpp  Face.cpp  GaussianQuadrature_tri.cpp  GenSoftSSINT_solver.cpp  KineticState.cpp  LJSteric_solver.cpp  LJ_matrix.cpp  LinkedListCube.tpp  MassLumpedSolver.cpp  MassMatrixLinear.cpp  MassMatrixQuadratic.cpp  NearestNeighbourLinkedListCube.cpp  NoMassCGSolver.cpp  PoissonMatrixQuadratic.cpp  PreComp_solver.cpp  RngStream.cpp  SimulationParams.cpp  SparseMatrixFixedPattern.cpp  SparseMatrixTypes.cpp  SparseMatrixUnknownPattern.cpp  SparseSubstitutionSolver.cpp  SparsityPattern.cpp  Spring.cpp  Steric_solver.cpp  VdW_solver.cpp  VolumeIntersection.cpp  World.cpp  ffea.cpp  ffea_test.cpp  mat_vec_fns.cpp  (+8 more)
tests/consistency/rngstream/: CMakeLists.txt  testRngStream.cpp
tests/consistency/script/: CMakeLists.txt  test_script_loader.cpp
tests/consistency/volume/: CMakeLists.txt  testVolume.cpp
tests/ffeatools/load_trajectory/: CMakeLists.txt  python_load_trajectory.py
tests/physics/EI_cyl_160_fine/: CMakeLists.txt  calcEI.py
tests/physics/E_cyl_160_fine/: CMakeLists.txt  calcE.py
tests/physics/cubes_lj/: CMakeLists.txt
tests/physics/sphere_63_120_mass/: CMakeLists.txt
tests/physics/sphere_63_120_nomass/: CMakeLists.txt
tests/physics/sphere_63_120_nomass_restart/: CMakeLists.txt
tests/physics/sphere_63_120_nomass_two_vdw-preComp/: CMakeLists.txt
tests/physics/sphere_diffusion/: CMakeLists.txt  diffusion_mass.py  diffusion_nomass.py
tests/physics/squidgy_steric/: CMakeLists.txt  checkSquidgySpheres.cpp
tests/physics/steric_cubes_w_springs/: CMakeLists.txt  checkIntersections.cpp
tests/rods/integration/: CMakeLists.txt
tests/rods/integration/.stericCollision_pushApart/: CMakeLists.txt  rod_collision_no_crash.ffeatest  run_test.py
tests/rods/integration/beam/: CMakeLists.txt
tests/rods/integration/collision/: CMakeLists.txt  create_straight_rod.py  int_rodStericCollision_pushApart.ffeatest  rodInt_stericCollision_pushApart.ffeatest  run_test.py
tests/rods/integration/connection/: bend.ffea
tests/rods/integration/equipartition/: CMakeLists.txt  equipartition_test.py  realistic.ffea
tests/rods/integration/interactPBC_equalEnergy/: 1A.rodtraj  1B.rodtraj  2A.rodtraj  2B.rodtraj  CMakeLists.txt  cleanup.sh  del.fcp  del.fdm  del.fm  del.ftj  interact.ffea  run_test.py  z-axis.rod
tests/rods/integration/lj/: cleanup.sh  create_straight_rod.py  ljtest.ffea  params.yml  rod_vdw_site_placement.ffeatest  run_test.py
tests/rods/integration/new_unnamed_steric_test/: create_straight_rod.py  failed_table.md  ffea_from_template.py  node_node_distance.py  params.yml  readme.md  run_test.py  template.ffea  test_config.yml
tests/rods/integration/pbc_wrap/: CMakeLists.txt  create_straight_rod.py  run_test.py  wrap.ffea
tests/rods/integration/stericCollision_initForceCentralSymmetric/: CMakeLists.txt  create_straight_rod.py  run_test.py
tests/rods/integration/stericCollision_pushApart/: CMakeLists.txt  collision_two_rods.ffea  create_straight_rod.py  run_test.py  z-axis.rod
tests/rods/integration/stericInteract_fullySeparate/: CMakeLists.txt  create_straight_rod.py  ffea_from_template.py  node_node_distance.py  params.yml  readme.md  run_test.py  template.ffea
tests/rods/integration/stericInteract_initForceSymmetric/: CMakeLists.txt  collision_twoRods_singleFrame.ffea  create_straight_rod.py  run_test.py  z-axis.rod
tests/rods/integration/steric_vdw_potential_minimum/: CMakeLists.txt  create_straight_rod_vdw.py  interp_twoRods.ffea  lj_twoRods.ffea  params.yml  run_test.py  steric_twoRods.ffea
tests/rods/integration/symmetry/: CMakeLists.txt  symmetry_test.py  symmetry_test_bend_only.ffea  symmetry_test_stretch_only.ffea  symmetry_test_twist_only.ffea
tests/rods/unit/: CMakeLists.txt
tests/rods/unit/arbitrary_equilibrium_twist/: CMakeLists.txt
tests/rods/unit/bend_test/: CMakeLists.txt  bend_test.cpp
tests/rods/unit/connection/: CMakeLists.txt  tet_ascii.1.ffea
tests/rods/unit/connection_energy/: realistic.ffea  realistic_reversed.ffea
tests/rods/unit/connection_energy_2/: CMakeLists.txt  realistic.ffea  realistic_reversed.ffea
tests/rods/unit/translation_and_rotation_test/: CMakeLists.txt  translation_and_rotation_test.cpp
tests/rods/unit/twist_bend_independence/: CMakeLists.txt  twist_bend_independence.cpp
(+65 files in other folders)
